// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should transform non-exported.tsx with memo 1`] = `

File: non-exported.tsx
TypeScript before transform:

  import * as React from 'react'
  
  class A1 extends React.PureComponent<{ message: string }> {
    render() {
      return <div>{ this.props.message }</div>
    }
  }
  
  export { A1 }
  

      ↓ ↓ ↓ ↓ ↓ ↓

TypeScript after transform:

  import { memo as react_memo_1 } from "react";
  import * as React from 'react';
  function rewrited_pure_class_A1_1(rewrited_props_1: any) {
    let ctx_1 = { props: rewrited_props_1 };
    return <div>{rewrited_props_1.message}</div>;
  }
  const A1 = rewrited_pure_class_A1_1;
  export { A1 };
  

`;

exports[`should transform non-exported.tsx without memo 1`] = `

File: non-exported.tsx
TypeScript before transform:

  import * as React from 'react'
  
  class A1 extends React.PureComponent<{ message: string }> {
    render() {
      return <div>{ this.props.message }</div>
    }
  }
  
  export { A1 }
  

      ↓ ↓ ↓ ↓ ↓ ↓

TypeScript after transform:

  import * as React from 'react';
  function rewrited_pure_class_A1_1(rewrited_props_1: any) {
    let ctx_1 = { props: rewrited_props_1 };
    return <div>{rewrited_props_1.message}</div>;
  }
  const A1 = rewrited_pure_class_A1_1;
  export { A1 };
  

`;
